# techsupport-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: urls.py
custom_admin/: urls.py
custom_admin/filters/: ticket_history.py  users.py
custom_admin/views/: ticket_categories.py  tickets.py  users.py
docker/: entrypoint.sh
docker/nginx/: default.conf
docs/: user_guide.md
notifications/: consumers.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
notifications/consumers/: base.py  support.py  user.py
notifications/migrations/: 0001_initial.py  0002_initial.py
scripts/: activate-poetry.ps1  activate-poetry.sh
techsupport/: asgi.py  celery.py  exception_handlers.py  exceptions.py  middleware.py  settings.py  urls.py  wsgi.py
techsupport/common/: mixins.py  serializers.py  utils.py
techsupport/settings/: base.py  dev.py  prod.py
tests/custom_admin/: conftest.py
tests/locust/: locustfile.py  tickets_tasks.py  users_tasks.py
tests/notifications/: conftest.py  test_notification_consumers.py  test_notification_tasks.py  test_notification_views.py
tests/users/: conftest.py  test_models.py  test_user_views.py
tickets/: filters.py  mixins.py  serializers.py  signals.py  urls.py  views.py
tickets/migrations/: 0001_initial.py  0002_initial.py  0003_remove_ticketcategory_is_active_and_more.py  0004_remove_ticket_tickets_tic_priorit_0bec9b_idx_and_more.py
tickets/models/: __init__.py  ticket.py  (+4 more)
users/: models.py  permissions.py  serializers.py  urls.py  views.py
(+63 files in other folders)
