[project]
name = "techsupport"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Shibaev",email = "nshib.54321@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "djoser (>=2.3.1,<3.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "channels (>=4.2.2,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "nh3 (>=0.2.21,<0.3.0)",
    "django-filter (>=25.1,<26.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "daphne (>=4.2.0,<5.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
